RTC终于像个正常人了

--- a/F030C8Tx_LoRaWAN/MDK-ARM/F030_LoRaWAN/F030_LoRaWAN.build_log.htm
+++ b/F030C8Tx_LoRaWAN/MDK-ARM/F030_LoRaWAN/F030_LoRaWAN.build_log.htm
@@ -22,21 +22,19 @@ Dialog DLL:      TARMCM1.DLL V1.14.0.0
  
 <h2>Project:</h2>
 C:\Users\Administrator\Desktop\asdasdasd\F030_LoRaWAN\MDK-ARM\F030_LoRaWAN.uvprojx
-Project File Date:  01/11/2019
+Project File Date:  01/14/2019
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'D:\KEILSOFTWARE\KEILC52_959\ARM\ARMCC\Bin'
 Build target 'F030_LoRaWAN'
-compiling rtc-board.c...
-..\Board\rtc-board.c(211): warning:  #177-D: variable "sAlarm"  was declared but never referenced
-  			RTC_AlarmTypeDef sAlarm = {0};
-..\Board\rtc-board.c(786): warning:  #1-D: last line of file ends without a newline
-  //}
-..\Board\rtc-board.c: 2 warnings, 0 errors
+compiling board.c...
+..\Board\board.c(450): warning:  #1215-D: #warning directive: "这里是开始第一个闹钟"
+  		#warning "这里是开始第一个闹钟"
+..\Board\board.c: 1 warning, 0 errors
 linking...
-Program Size: Code=33434 RO-data=1406 RW-data=272 ZI-data=5120  
+Program Size: Code=33534 RO-data=1406 RW-data=272 ZI-data=5072  
 FromELF: creating hex file...
-"F030_LoRaWAN\F030_LoRaWAN.axf" - 0 Error(s), 2 Warning(s).
+"F030_LoRaWAN\F030_LoRaWAN.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
